--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "vite": "^5.3.1"
   }
 }
